# AgentMemory

./: .gitignore  ARCHITECTURE-v0.3.md  CHANGELOG-2026-07-15-v2.md  CHANGELOG-2026-07-15.md  CHANGELOG-MARKET-COMPARISON-2026-07-15.md  CHANGELOG.md  DELIVERY.md  README.md  README_CN.md  README_EN.md  README_FR.md  README_JA.md  README_KO.md  README_ZHT.md  RELEASE_NOTES_v2.0.0.md  SKILL.md  TEST_REPORT.md  VERIFICATION_REPORT.md  _sec_inj_count.py  _sec_test_add_await.py  _sec_test_classifier_pollution.py  _sec_test_concurrent_fallback.py  _sec_test_default_sign.py  _sec_test_embedding_pollution.py  _sec_test_hmac_key.py  _sec_test_id_collision.py  _sec_test_injection.py  _sec_test_l3_count_bug.py  _sec_test_l3_delete.py  _sec_test_l3_search_query_type.py  _sec_test_l4_concurrency.py  _sec_test_search_no_filter.py  _sec_test_sync_trust.py  fix_llm_provider.py  fix_search_engine.py  fix_search_engine2.py  fix_search_engine3.py  pyproject.toml  pytest.ini  run_tag_graph_tests.py  (+4 more)
.context/: review-l1_lcm.txt  review-l4-l3-sync.txt  review-library.txt  review-web.txt
.github/workflows/: test.yml
agentmemory/: L1_lcm_compressor.py  L2_graph_store.py  L3_vector_store.py  L4_file_persist.py  __init__.py  cli.py  config.py  memory_manager.py  test_L4_file_persist.py
agentmemory/adapters/: __init__.py  claude_code.py  crewai.py  openclaw.py
agentmemory/agent_permissions/: __init__.py
agentmemory/ai/: __init__.py  classifier.py  prompts.py
agentmemory/api/v2/: __init__.py  app.py
agentmemory/data/: __init__.py  datalake.py  embedding_state.py  library.py  tag_index.py  tiered_log.py
agentmemory/knowledge/: __init__.py  tag_graph.py
agentmemory/multi_agent/: __init__.py
agentmemory/providers/: __init__.py  llm.py
agentmemory/search/: rrf_fusion.py  search_engine.py
agentmemory/tests/: test_api_v2.py  test_classifier.py  test_config.py  test_datalake.py  test_decay_engine.py  test_embedding_state.py  test_library.py  test_memory_hermes.py  test_models.py  test_multi_agent.py  test_permissions.py  test_search_engine.py  test_tag_graph.py  test_tag_index.py  test_tiered_log.py
agentmemory/v2_providers/: __init__.py  embedder_provider.py  embedding_worker.py  llm_provider.py  protocols.py  registry.py  vectorstore_provider.py
agentmemory/web/: app.py
agentmemory/web/static/: styles.css
agentmemory/web_v2/: index.html  package-lock.json  package.json  vite.config.ts
agentmemory/workers/: __init__.py
benchmarks/: v2.0-baseline.json
docs/: ARCHITECTURE-IMPL.md  ARCHITECTURE.md  SPRINT-BRIEF.md  USAGE.md  api-contract.md  investigation-report.md  providers-contract.md  v2-architecture.md
memory/: MEMORY.md  mem_63fbc9ca.md  mem_63fbc9ca.meta.json  mem_c074c729.meta.json  mem_c074c729.vec.json
memory_v03_test/: 5412a2c49adbdee8.md  5412a2c49adbdee8.meta.json  5412a2c49adbdee8.vec.json  a9fdcbfac6bb8342.meta.json
reports/: agentmemory-security-review.md
src/: L1_lcm_compressor.py  __init__.py  cli.py  models.py  test_L2_graph_store.py
src/adapters/: base.py  claude_code.py  langchain.py  mcp_server.py  openai_agents.py  openclaw.py  transparent_background.py
src/agent_memory/: __init__.py  __main__.py  agent_tool.py  agentteam_integration.py  bm25.py  cli.py  compactor.py  config.py  config_watcher.py  contradiction.py  dream_cli.py  dream_consolidate.py  dream_engine.py  dream_graph.py  dream_narrative.py  dream_phase_selector.py  dream_provenance.py  dream_scheduler.py  dream_signal.py  embedder.py  embedder_registry.py  fact_extractor.py  fastembed_embedder.py  fuzzy_search.py  health_monitor.py  integrity.py  l1_lcm.py  l3_lancedb.py  l3_lancedb.py.bak  l3_qdrant.py  l4_files.py  langchain_compat.py  library.py  manager.py  memory_manager.py  observability.py  observations.py  reranker.py  search_pipeline.py  sqlite_store.py  (+5 more)
src/api/: app.py
src/data/: vectors.json
src/memory/: MEMORY.md
src/providers/: embedder.py  llm.py
src/web/: __init__.py  app.py
tests/: BASELINE.md  README.md  __init__.py  conftest.py  test_audit_coverage.py  test_cli.py  test_dream_intelligence.py  test_dream_orchestration.py  test_dream_system.py  test_e2e.py  test_e2e_bug_fixes.py  test_engineering_ports.py  test_fact_extractor.py  test_fact_extractor_l1_integration.py  test_l1_lcm.py  test_l3_lancedb.py  test_l4_files.py  test_langchain_compat.py  test_library.py  test_local_embedder_features.py  test_local_embedder_v2.py  test_manager.py  test_observations.py  test_provenance_integration.py  test_security_p0.py  test_sync.py  test_temporal_recall.py  test_temporal_validity.py  test_vcp_aligned.py
tests/benchmarks/: README.md  test_perf_adapter_bind.py  test_perf_memory_size.py  test_perf_query.py  test_perf_store.py
tests/compatibility/: test_framework_adapters.py
tests/e2e/: test_concurrent_agents.py  test_e2e_scenarios.py  test_fault_recovery.py
tests/factories/: __init__.py  category_factory.py  embedding_factory.py  memory_factory.py
tests/integration/: test_e2e_qa.py  test_http_api.py  test_web.py
tests/perf/: test_performance_baseline.py
tests/performance/: test_performance.py
tests/security/: test_security.py
tests/test_data_layer/: __init__.py  conftest.py  test_classifier.py  test_datalake.py  test_embedding_state.py  test_library.py  test_tag_index.py  test_tiered_log.py
tests/test_providers/: __init__.py  test_embedder_providers.py  test_llm_providers.py
tests/test_search/: __init__.py  test_embedder_protocol.py  test_vectorstore.py
tests/unit/: test_L2_graph_store.py  test_L3_vector_store.py  test_L4_file_persist.py  test_adapters.py  test_bm25_hybrid.py  test_cli.py  test_cli_qa.py  test_config.py  test_decay_engine.py  test_embedder_qa.py  test_errors.py  test_l1_lcm_qa.py  test_l4_file_persist_qa.py  test_memory_manager.py  test_memory_manager_qa.py  test_models.py  test_providers.py  test_sync_qa.py
tests/utils/: __init__.py  assertions.py  async_helpers.py
web_server/: README.md  __init__.py  __main__.py  app.py  handlers.py  models.py  requirements.txt  server.py  test_api.sh
web_server/static/: index.html
(+93 files in other folders)
