[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentmemory"
version = "2.0.1"
description = "双轨检索 + 图书馆分类 - 工业级 Agent 长期记忆，零依赖，pip install 后 import 即可用"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "楚灵", email = "chuling@agentteam.dev"}
]
keywords = ["memory", "agent", "hermes", "mem0", "vector-store", "knowledge-base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "mcp>=1.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5",
    "python-ulid>=1.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
]

[project.scripts]
agentmemory = "agentmemory.cli:main"

[project.urls]
Homepage = "https://github.com/YintaTriss/AgentMemory"
Repository = "https://github.com/YintaTriss/AgentMemory"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
